# fastscraper-js

./: .gitattributes  .gitignore  Cargo.toml  README.md  biome.json  index.js  lint-staged.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts  fixture.html  package.json
src/: lib.rs  node_list.rs
