
[package]
authors    = ["Cabbage Lettuce <33714346+pycabbage@users.noreply.github.com>"]
edition    = "2021"
name       = "fastscraper_js"
repository = "https://github.com/pycabbage/fastscraper-js/"
version    = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ego-tree    = "0.11.0"
napi        = "3.0.0"
napi-derive = "3.0.0"
scraper     = { version = "0.27.0", features = ["atomic"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
